--- a/index.html
+++ b/index.html
@@ -4,10 +4,47 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>les-paul-showcase</title>
+    <title>LES PAUL</title>
   </head>
   <body>
-    <div id="app"></div>
+    <Header>
+      <h1>LES PAUL</h1>
+
+      <nav>
+        <a href="#">About</a>
+        <a href="#">Sizing</a>
+        <a href="#">Buy</a>
+      </nav>
+    </Header>
+
+    <section class="new-drop">
+      <img src="logo.svg" alt="New Drop" />
+    </section>
+
+    <section class="content">
+      <img src="img1.jpg" alt="Photo" />
+
+      <p>
+        In a world inundated with flashy designs and over-the-top branding, Normal Sneakers emerges as a breath of fresh air, prioritizing minimalistic elegance and unparalleled comfort.
+      </p>
+    </section>
+
+    <section class="content">
+      <img src="img1.jpg" alt="Photo" />
+
+      <p>
+        Merging traditional craftsmanship with innovative technology, our newest sneaker release promises not just footwear, but a lifestyle choice for those who value understated sophistication and everyday functionality.
+      </p>
+    </section>
+
+    <section class="content">
+      <img src="img1.jpg" alt="Photo" />
+
+      <p>
+        Join us in celebrating a return to the essentials and stepping into a new era of footwear. Welcome to the Normal revolution.
+      </p>
+    </section>
+
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
