--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <nav>
         <a href="#">About</a>
         <a href="#">Sizing</a>
-        <a href="#">Buy</a>
+        <a href="#" class="button">Buy</a>
       </nav>
     </Header>
 
@@ -30,11 +30,11 @@
     </section>
 
     <section class="content">
-      <img src="img1.jpg" alt="Photo" />
-
       <p>
         Merging traditional craftsmanship with innovative technology, our newest sneaker release promises not just footwear, but a lifestyle choice for those who value understated sophistication and everyday functionality.
       </p>
+
+      <img src="img1.jpg" alt="Photo" />
     </section>
 
     <section class="content">
