--- a/index.html
+++ b/index.html
@@ -22,26 +22,26 @@
     </section>
 
     <section class="content">
-      <img src="img1.jpg" alt="Photo" />
+      <img src="img3.jpg" alt="Photo" />
 
       <p>
-        In a world inundated with flashy designs and over-the-top branding, Normal Sneakers emerges as a breath of fresh air, prioritizing minimalistic elegance and unparalleled comfort.
+        Amid a world of experimental sounds, the Les Paul guitar remains a classic. Its warm tone, solid build, and timeless style continue to inspire musicians.
       </p>
     </section>
 
     <section class="content">
       <p>
-        Merging traditional craftsmanship with innovative technology, our newest sneaker release promises not just footwear, but a lifestyle choice for those who value understated sophistication and everyday functionality.
+        Combining traditional craftsmanship with modern design, the Les Paul is more than an instrument. It's for those who value enduring style and versatile performance.
       </p>
 
-      <img src="img1.jpg" alt="Photo" />
+      <img src="img2.jpg" alt="Photo" />
     </section>
 
     <section class="content">
       <img src="img1.jpg" alt="Photo" />
 
       <p>
-        Join us in celebrating a return to the essentials and stepping into a new era of footwear. Welcome to the Normal revolution.
+        Experience the harmony of tradition and innovation, where every note tells a story. Discover the lasting power of the Les Paul.
       </p>
     </section>
 
