--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>LES PAUL</title>
   </head>
   <body>
-    <Header>
+    <header>
       <h1>LES PAUL</h1>
 
       <nav>
@@ -15,7 +15,11 @@
         <a href="#">Sizing</a>
         <a href="#" class="button">Buy</a>
       </nav>
-    </Header>
+    </header>
+
+    <section class="guitar">
+      
+    </section>
 
     <section class="new-drop">
       <img src="logo.svg" alt="New Drop" />
