--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>LES PAUL</title>
   </head>
   <body>
+    <div class="loader">
+      <span>0%</span>
+    </div>
+
     <header>
       <h1>LES PAUL</h1>
 
@@ -18,7 +22,7 @@
     </header>
 
     <section class="guitar">
-      
+
     </section>
 
     <section class="new-drop">
